✨ Added:  -> POST Signup Route  -> POST Login Route  -> GET Me Route  -> POST Todos Route  -> GET Todos Route  -> PATCH Todos/:todoID/done Route  -> JWT Authentication Middleware  -> User Routes Validation Middleware  -> Todo Routes Validation Middleware  -> DB Schemas/Models  -> README.md for Backend Server.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Node.js
-node_modules/
+common/node_modules
+node_modules
 npm-debug.log
 yarn-error.log
 
@@ -21,6 +22,7 @@ build/
 .env.*.local
 
 # Dependency lock files
+package.json
 package-lock.json
 yarn.lock
 
