--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
+    "@nilay-n00bie/common": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "zod": "^3.22.4"
